# locust-template

./: Dockerfile  README.md  pyproject.toml
LoadTests/: locustfile.py  settings.py
LoadTests/authentication/: interface.py  session.py
