[tool.poetry]
name = "loadtests"
version = "0.1.0"
description = "A package that contains boiler plate load testing code using the Locust framework"
authors = ["atmask <benjaminajm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.29.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
